--- a/WebApp/appsettings.Development.json
+++ b/WebApp/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MarketManagement": "Data Source=MSI\\SQLEXPRESS;User ID=meuNovoUsuario;Password=meuNovoUsuario;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "MarketManagement": "Data Source=MSI\\SQLEXPRESS;Database=GestaoSuper;User ID=meuNovoUsuario;Password=meuNovoUsuario;Connect Timeout=30;Encrypt=True;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "Logging": {
     "LogLevel": {
