--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -1,12 +1,11 @@
 {
+  "ConnectionStrings": {
+    "MarketManagement": "Data Source=MSI\\SQLEXPRESS;Database=GestaoSuper;User ID=meuNovoUsuario;Password=meuNovoUsuario;Connect Timeout=30;Encrypt=True;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "AccountContextConnection": "Data Source=MSI\\SQLEXPRESS;User ID=meuNovoUsuario;Password=meuNovoUsuario;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
   }
 }
